[package]
name = "logger"
version = "0.1.0"
authors = ["luciferchn@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
slog = "2.7.0"
slog-term = "2.6.0"
slog-filerotate = {git = "https://github.com/luoyancn/slog-filerotate", tag = "v0.1.0"}
