[package]
name = "slog-logger"
version = "0.1.0"
authors = ["luciferchn@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
slog = {version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"]}
slog-scope = "4.4.0"
slog-term = "2.9.0"
slog-stdlog = "4.1.0"
slog-filerotate = {git = "https://github.com/luoyancn/slog-filerotate", tag = "v0.3.0"}
